gitops/apps/staging/nami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nami-n8n
spec:
  selector:
    app: nami-n8n
  ports:
    - port: 3008
