gitops/apps/staging/nami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nami-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - nami.cloudlab.rahatahsan.com
      secretName: nami-tls
  rules:
    - host: nami.cloudlab.rahatahsan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nami-n8n
                port:
                  number: 3008
